ロゴは直った

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <body>
 
     <div id="container">
-        <div class="main-visual"></div>
-        <img src="images/logo.png" alt="" width="500" class="logo">
+        <div class="main-visual">
+            <div class="logo">
+                <img src="images/logo.png" alt="" width="500">
+                <h2 class="we">We are Web Designers</h2>
+            </div>
+        </div>
         <div id="header">
             <nav>
                 <ul>
@@ -22,7 +26,6 @@
                 </ul>
             </nav>
         </div>
-        <h2 class="we">We are Web Designers</h2>
     </div>
 
     <div class="container">
@@ -59,10 +62,13 @@
         <div id="course">
             <div class="html">
                 <img src="images/html.png" alt="" width="100">
-                <!--
-            <p>HTMLコース</p>
-            <a href="https://www.facebook.com/profile.php?id=100034244992160"  class="fbbutton2">このコースを受ける</a>
-            -->
+                <p>HTMLコース</p>
+                <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="html">このコースを受ける</a>
+            </div>
+            <div class="css">
+                <img src="images/css.png" alt="" width="100">
+                <p>CSSコース</p>
+                <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="css">このコースを受ける</a>
             </div>
         </div>
     </div>
