コースのボタンの高さが揃ってない

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
@@ -60,16 +61,47 @@
     <div class="courses">
         <h1>Courses</h1>
         <div id="course">
-            <div class="html">
-                <img src="images/html.png" alt="" width="100">
-                <p>HTMLコース</p>
-                <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="html">このコースを受ける</a>
+            <div class="htmlBox">
+                <div class="html">
+                    <img src="images/html.png" alt="" width="100">
+                    <p>HTMLコース</p>
+                    <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="html">このコースを受ける</a>
+                </div>
+                <div class="html">
+                    <img src="images/css.png" alt="" width="100">
+                    <p>CSSコース</p>
+                    <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="css">このコースを受ける</a>
+                </div>
+                <div class="html">
+                    <img src="images/unity.png" alt="" width="100">
+                    <p>Unityコース</p>
+                    <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="unity">このコースを受ける</a>
+                </div>
+                <div class="html">
+                    <img src="images/ruby.png" alt="" width="100">
+                    <p>Rubyコース</p>
+                    <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="ruby">このコースを受ける</a>
+                </div>
             </div>
-            <div class="css">
-                <img src="images/css.png" alt="" width="100">
-                <p>CSSコース</p>
-                <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="css">このコースを受ける</a>
+            <div class="jsBox">
+                <div class="html">
+                    <img src="images/js.png" alt="" width="100">
+                    <p>JavaScriptコース</p>
+                    <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="js">このコースを受ける</a>
+                </div>
+                <div class="html">
+                    <img src="images/swift.png" alt="" width="100">
+                    <p>Swiftコース</p>
+                    <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="swift">このコースを受ける</a>
+                </div>
+                <div class="html">
+                    <img src="images/go.png" alt="" width="100">
+                    <p>Goコース</p>
+                    <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="go">このコースを受ける</a>
+                </div>
             </div>
         </div>
     </div>
-</body></html>
+</body>
+
+</html>
