Introductionの中央寄せとナビゲーションの右寄せがダメ

--- a/index.html
+++ b/index.html
@@ -30,32 +30,35 @@
     </div>
 
     <div class="container">
+       <div id="main">
         <h1>Introduction</h1>
-        <div id="main">
+        
             <div class="content" id=contents1>
 
-                <img src="images/introduction_001.jpg" alt="" width="300">
-
-
+                <img src="images/introduction_001.jpg" alt="" width="450">
                 <div class="right-box">
-                    <p>Happy Hackはいまをときめく若者がITを活用したものづくりに取り組める環境を提供しています。<br>特に、Webデザイン領域のプログラミングを学習している生徒が一番積極的に活動しています。<br>誰でも最初は初心者。それを一番知っている我々がプログラミングへの第一歩を踏み出すお手伝いをさせていただきます。</p>
+                    <div class="message">
+                        <p>Happy Hackはいまをときめく若者がITを活用したものづくりに取り組める環境を提供しています。<br>特に、Webデザイン領域のプログラミングを学習している生徒が一番積極的に活動しています。<br>誰でも最初は初心者。それを一番知っている我々がプログラミングへの第一歩を踏み出すお手伝いをさせていただきます。</p>
+                    </div>
+                    <div class="register">
                     <a href="https://www.facebook.com/profile.php?id=100034244992160" class="fbbutton1">会員登録</a>
+                    </div>
                 </div>
             </div>
 
             <div class="content" id=contents2>
                 <div class="left-box">
                     <p>Happy Hackでは「楽しさ」と「真剣さ」をモットーにプログラミングを学びます。コースは全部で７つ準備をしています。WebデザインからWebサービス、3DゲームやiPhoneアプリまで幅広くお楽しみいただけます。<br>自分の想いをカタチにして発信することをぜひこの場で体験してみてください。世界が変わって見えるかもしれません。</p>
+                    <div class="register">
                     <a href="https://www.facebook.com/profile.php?id=100034244992160" class="fbbutton2">会員登録</a>
-                </div>
-                <div class="animation2">
-                    <img src="images/introduction_002.jpg" alt="" width="300">
-                    <div class="caption">
                     </div>
                 </div>
+                <div class="animation2">
+                    <img src="images/introduction_002.jpg" alt="" width="450">
+                </div>
             </div>
-
-        </div>
+           </div>
+    
 
     </div>
     <div class="courses">
@@ -102,6 +105,13 @@
             </div>
         </div>
     </div>
-</body>
-
-</html>
+    <div class="courses">
+        <h1>Images</h1>
+        <img src="images/hero.png" alt="" width="100">
+    </div>
+    <div class="courses">
+        <h1>Access</h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.3129539477477!2d135.49025991496976!3d34.69728569090934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e6f359905ed7%3A0x9fec1659611f776f!2zTGlmZSBpcyBUZWNoISDlpKfpmKrjgqrjg5XjgqPjgrk!5e0!3m2!1sja!2sjp!4v1582427818667!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    </div>
+    <footer>&copy; 2019 Happy Hack Inc.</footer>
+</body></html>
