右寄せと中央寄せした

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title>Happy Hack</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    
 </head>
 
 <body>
@@ -14,16 +14,16 @@
         <div class="main-visual">
             <div class="logo">
                 <img src="images/logo.png" alt="" width="500">
-                <h2 class="we">We are Web Designers</h2>
+                <h2 class="we">We are Web Designers.</h2>
             </div>
         </div>
         <div id="header">
             <nav>
                 <ul>
                     <li><a href="./index.html">Introduction</a></li>
-                    <li><a href="https://www.apple.com/jp/">Cources</a></li>
-                    <li><a href="https://www.google.co.jp/">Images</a></li>
-                    <li><a href="https://ja-jp.facebook.com/">Access</a></li>
+                    <li><a href="#courses">Cources</a></li>
+                    <li><a href="#images">Images</a></li>
+                    <li><a href="#access">Access</a></li>
                 </ul>
             </nav>
         </div>
@@ -61,7 +61,7 @@
     
 
     </div>
-    <div class="courses">
+    <div class="courses" id="courses">
         <h1>Courses</h1>
         <div id="course">
             <div class="htmlBox">
@@ -105,11 +105,11 @@
             </div>
         </div>
     </div>
-    <div class="courses">
+    <div class="courses" id="images">
         <h1>Images</h1>
         <img src="images/hero.png" alt="" width="100">
     </div>
-    <div class="courses">
+    <div class="courses" id="access">
         <h1>Access</h1>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.3129539477477!2d135.49025991496976!3d34.69728569090934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e6f359905ed7%3A0x9fec1659611f776f!2zTGlmZSBpcyBUZWNoISDlpKfpmKrjgqrjg5XjgqPjgrk!5e0!3m2!1sja!2sjp!4v1582427818667!5m2!1sja!2sjp" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     </div>
