レスポンシブ入った

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="(max-width:1024px)" href="mobile.css">
     <title>Happy Hack</title>
     <link rel="shortcut icon" href="images/favicon.ico">
     <script src="jquery-3.4.1.min.js"></script>
@@ -19,6 +20,7 @@
 
     <link rel="stylesheet" type="text/css" href="jquery/slick.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="jquery/slick-theme.css" media="screen" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 </head>
 
 <body>
