--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
 
 
-    <script type="text/javascript" src="jquery/slick.min.js"></script>
+
 
     <link rel="stylesheet" type="text/css" href="jquery/slick.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="jquery/slick-theme.css" media="screen" />
@@ -26,7 +26,7 @@
 <body>
     <div class="bg-slider">
         <div id="container">
-           <div id="header">
+            <div id="header">
                 <nav>
                     <ul>
                         <li><a href="./index.html">Introduction</a></li>
@@ -42,7 +42,7 @@
                     <h2 class="we">We are Web Designers.</h2>
                 </div>
             </div>
-            
+
         </div>
     </div>
 
@@ -65,6 +65,7 @@
                 </div>
 
                 <div class="content" id=contents2>
+                    <img src="images/introduction_002.jpg" alt="" width="450">
                     <div class="left-box">
                         <p>Happy Hackでは「楽しさ」と「真剣さ」をモットーにプログラミングを学びます。コースは全部で７つ準備をしています。WebデザインからWebサービス、3DゲームやiPhoneアプリまで幅広くお楽しみいただけます。<br>自分の想いをカタチにして発信することをぜひこの場で体験してみてください。世界が変わって見えるかもしれません。</p>
                         <div class="register">
@@ -72,7 +73,7 @@
                         </div>
                     </div>
                     <div class="animation2">
-                        <img src="images/introduction_002.jpg" alt="" width="450">
+
                     </div>
                 </div>
             </div>
@@ -86,42 +87,50 @@
                     <h1>Courses</h1>
                     <div id="course">
                         <div class="htmlBox">
-                            <div class="html">
-                                <img src="images/html.png" alt="" width="100">
-                                <p>HTMLコース</p>
-                                <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="html">このコースを受ける</a>
+                            <div class="mobileBox1">
+                                <div class="html">
+                                    <img src="images/html.png" alt="" width="100">
+                                    <p>HTMLコース</p>
+                                    <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="html">このコースを受ける</a>
+                                </div>
+                                <div class="html">
+                                    <img src="images/css.png" alt="" width="100">
+                                    <p>CSSコース</p>
+                                    <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="css">このコースを受ける</a>
+                                </div>
                             </div>
-                            <div class="html">
-                                <img src="images/css.png" alt="" width="100">
-                                <p>CSSコース</p>
-                                <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="css">このコースを受ける</a>
-                            </div>
-                            <div class="html">
-                                <img src="images/unity.png" alt="" width="100">
-                                <p>Unityコース</p>
-                                <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="unity">このコースを受ける</a>
-                            </div>
-                            <div class="html">
-                                <img src="images/ruby.png" alt="" width="100">
-                                <p>Rubyコース</p>
-                                <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="ruby">このコースを受ける</a>
+                            <div class="mobileBox1">
+                                <div class="html">
+                                    <img src="images/unity.png" alt="" width="100">
+                                    <p>Unityコース</p>
+                                    <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="unity">このコースを受ける</a>
+                                </div>
+                                <div class="html">
+                                    <img src="images/ruby.png" alt="" width="100">
+                                    <p>Rubyコース</p>
+                                    <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="ruby">このコースを受ける</a>
+                                </div>
                             </div>
                         </div>
                         <div class="jsBox">
-                            <div class="html">
-                                <img src="images/js.png" alt="" width="100">
-                                <p>JavaScriptコース</p>
-                                <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="js">このコースを受ける</a>
+                            <div class="mobileBox1">
+                                <div class="html">
+                                    <img src="images/js.png" alt="" width="100">
+                                    <p>JavaScriptコース</p>
+                                    <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="js">このコースを受ける</a>
+                                </div>
+                                <div class="html">
+                                    <img src="images/swift.png" alt="" width="100">
+                                    <p>Swiftコース</p>
+                                    <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="swift">このコースを受ける</a>
+                                </div>
                             </div>
-                            <div class="html">
-                                <img src="images/swift.png" alt="" width="100">
-                                <p>Swiftコース</p>
-                                <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="swift">このコースを受ける</a>
-                            </div>
-                            <div class="html">
-                                <img src="images/go.png" alt="" width="100">
-                                <p>Goコース</p>
-                                <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="go">このコースを受ける</a>
+                            <div class="mobileBox2">
+                                <div class="html">
+                                    <img src="images/go.png" alt="" width="100">
+                                    <p>Goコース</p>
+                                    <a href="https://www.facebook.com/profile.php?id=100034244992160" class="cbutton" id="go">このコースを受ける</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -151,17 +160,6 @@
                 <figure><img src="images/background4.jpg" width="" height="" alt="" /></figure>
                 <figure><img src="images/background5.jpg" width="" height="" alt="" /></figure>
             </div>
-            <script type="text/javascript">
-                $(function() {
-                    $('.slick-box').slick({
-                        infinite: true,
-                        slidesToShow: 4,
-                        slidesToScroll: 1,
-                        dots: true
-                    });
-                });
-
-            </script>
 
         </div>
     </div>
@@ -195,9 +193,42 @@
             });
         });
 
+        /*
+                $(function() {
+                    $('.slick-box').slick({
+                        infinite: true,
+                        slidesToShow: 4,
+                        slidesToScroll: 1,
+                        dots: true
+                    });
+                });
+        */
+        /*途中でウィンドウサイズを変えた時に変化しない*/
+        $(document).ready(function() {
+            //1024px以下の場合
+            if (window.matchMedia('(max-width: 1024px)').matches) {
+                $(function() {
+                    $('.slick-box').slick({
+                        infinite: true,
+                        slidesToShow: 1,
+                        slidesToScroll: 1,
+                        dots: true
+                    });
+                });
+                //1024px以上の場合
+            } else {
+                $(function() {
+                    $('.slick-box').slick({
+                        infinite: true,
+                        slidesToShow: 4,
+                        slidesToScroll: 1,
+                        dots: true
+                    });
+                });
+            };
+        });
     </script>
+    <script type="text/javascript" src="jquery/slick.min.js"></script>
     <script src="jquery/particles.min.js"></script>
     <script src="jquery/app.js"></script>
-</body>
-
-</html>
+</body></html>
