ナビゲーションの位置直した

--- a/index.html
+++ b/index.html
@@ -227,8 +227,11 @@
                 });
             };
         });
+
     </script>
     <script type="text/javascript" src="jquery/slick.min.js"></script>
     <script src="jquery/particles.min.js"></script>
     <script src="jquery/app.js"></script>
-</body></html>
+</body>
+
+</html>
