--- a/index.html
+++ b/index.html
@@ -2,39 +2,77 @@
 <html lang="ja">
 
 <head>
+
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <title>Matcha Sweets</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <!--
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    -->
+    <!--
     <link rel="stylesheet" media="(max-width:1024px)" href="mobile.css">
-    <title>Happy Hack</title>
+    -->
+    <!--
+    <title>Matcha Sweets</title>
+    -->
+    <!--
     <link rel="shortcut icon" href="images/favicon.ico">
+    -->
+    <!--
     <script src="jquery-3.4.1.min.js"></script>
     <link rel="stylesheet" href="jquery.bxslider.css">
+    -->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
+    <!--
     <script src="jquery.bxslider.min.js"></script>
     <script src="particles.js"></script>
     <script src="jquery/bgswitcher.js"></script>
+    -->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
 
 
 
-
+    <!--
     <link rel="stylesheet" type="text/css" href="jquery/slick.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="jquery/slick-theme.css" media="screen" />
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+    -->
 </head>
 
 <body>
+    <div class="main-visual">
+        <div class="logo">
+            <img src="images/logo1.png" alt="" width="">
+        </div>
+    </div>
+
+    <div class="area">
+        <h1>Area</h1>
+        <div class="container">
+            <a href="https://www.facebook.com/" class="item">浅草・押上</a>
+            <a href="https://www.facebook.com/" class="item">銀座・新橋</a>
+            <a href="https://www.facebook.com/" class="item">渋谷・新宿</a>
+            <a href="https://www.facebook.com/" class="item">六本木・表参道</a>
+            <a href="https://www.facebook.com/" class="item">神楽坂・飯田橋</a>
+            <a href="https://www.facebook.com/" class="item">丸の内・上野</a>
+            <a href="https://www.facebook.com/" class="item">二子玉川・自由が丘</a>
+            <a href="https://www.facebook.com/" class="item">西荻窪・吉祥寺</a>
+            <a href="https://www.facebook.com/" class="item">新宿</a>
+            <a href="https://www.facebook.com/" class="item">その他</a>
+        </div>
+    </div>
+
+    <div class="areaMap">
+        <img src="images/topMap.png" alt="" width="">
+    </div>
+
+    <!--
     <div class="bg-slider">
         <div id="container">
             <div id="header">
-                <nav>
-                    <ul>
-                        <li><a href="./index.html">Introduction</a></li>
-                        <li><a href="#courses">Cources</a></li>
-                        <li><a href="#images">Images</a></li>
-                        <li><a href="#access">Access</a></li>
-                    </ul>
-                </nav>
+                
             </div>
             <div class="main-visual">
                 <div class="logo">
@@ -142,7 +180,8 @@
     <div class="fadein">
         <div class="courses" id="images">
             <h1>Images</h1>
-            <!--
+            -->
+    <!--
         <div class="slider">
             <div>I am a slide.</div>
             <div>I am another slide.</div>
@@ -153,6 +192,7 @@
             });
         </script>
         -->
+    <!--
             <div class="slick-box">
                 <figure><img src="images/hero.jpg" width="" height="" alt="" /></figure>
                 <figure><img src="images/background2.jpg" width="" height="" alt="" /></figure>
@@ -171,7 +211,8 @@
         </div>
         <footer>&copy; 2019 Happy Hack Inc.</footer>
     </div>
-
+    -->
+    <!--
     <script>
         jQuery(function($) {
             $('.bg-slider').bgSwitcher({
@@ -204,6 +245,7 @@
                 });
         */
         /*途中でウィンドウサイズを変えた時に変化しない*/
+        /*
         $(document).ready(function() {
             //1024px以下の場合
             if (window.matchMedia('(max-width: 1024px)').matches) {
@@ -227,11 +269,15 @@
                 });
             };
         });
-
+*/
+        
     </script>
+    -->
+    <!--
     <script type="text/javascript" src="jquery/slick.min.js"></script>
     <script src="jquery/particles.min.js"></script>
     <script src="jquery/app.js"></script>
+    -->
 </body>
 
 </html>
