matcha first commitment

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title>Matcha Sweets</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">　
     <!--
     <link rel="stylesheet" media="(max-width:1024px)" href="mobile.css">
     -->
@@ -47,7 +47,7 @@
     <div class="area">
         <h1>Area</h1>
         <div class="container">
-            <a href="https://www.facebook.com/" class="item">浅草・押上</a>
+            <a href="./asakusa.html" class="item">浅草・押上</a>
             <a href="https://www.facebook.com/" class="item">銀座・新橋</a>
             <a href="https://www.facebook.com/" class="item">渋谷・新宿</a>
             <a href="https://www.facebook.com/" class="item">六本木・表参道</a>
