トップ調整

--- a/asakusa.html
+++ b/asakusa.html
@@ -210,7 +210,7 @@
                 <div class="left-box">
                     <h2>寿清庵</h2>
                     <p>名物：抹茶クレープ<br>
-                        営業時間：12: 00～18:00<br>
+                        営業時間：<br>12: 00～18:00<br>
                         定休日：不定休</p>
                     
                 </div>
