--- a/asakusa.html
+++ b/asakusa.html
@@ -1377,7 +1377,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="shopMap">
         <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1B3oGIxwEXKljpOS4AFr5gtaqCE6XIqgb" width="640" height="480"></iframe>
     </div>
@@ -1385,6 +1385,4 @@
 
 
 
-</body>
-
-</html>
+</body></html>
