店舗情報一通り書いた

--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
         <h1>Area</h1>
         <div class="container">
             <a href="./asakusa.html" class="item">浅草・押上</a>
-            <a href="https://www.facebook.com/" class="item">銀座・新橋</a>
-            <a href="https://www.facebook.com/" class="item">渋谷・新宿</a>
-            <a href="https://www.facebook.com/" class="item">六本木・表参道</a>
-            <a href="https://www.facebook.com/" class="item">神楽坂・飯田橋</a>
-            <a href="https://www.facebook.com/" class="item">丸の内・上野</a>
-            <a href="https://www.facebook.com/" class="item">二子玉川・自由が丘</a>
-            <a href="https://www.facebook.com/" class="item">西荻窪・吉祥寺</a>
-            <a href="https://www.facebook.com/" class="item">新宿</a>
-            <a href="https://www.facebook.com/" class="item">その他</a>
+            <a href="./ginza.html" class="item">銀座・新橋</a>
+            <a href="./sibuya.html" class="item">渋谷</a>
+            <a href="./roppongi.html" class="item">六本木・表参道</a>
+            <a href="./kagurazaka.html" class="item">神楽坂・飯田橋</a>
+            <a href="./marunouchi.html" class="item">丸の内・上野</a>
+            <a href="./nikotama.html" class="item">二子玉川・自由が丘</a>
+            <a href="./nishiogikubo.html" class="item">西荻窪・吉祥寺</a>
+            <a href="./sinzyuku.html" class="item">新宿</a>
+            <a href="./sonota.html" class="item">その他</a>
         </div>
     </div>
 
