インスタのリンク先変えた

--- a/sibuya.html
+++ b/sibuya.html
@@ -41,7 +41,7 @@
         <div class="pictures">
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B8Ap2dBAhaE/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/B8Ap2dBAhaE/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="#zenkasyoin" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -92,7 +92,7 @@
 
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/BivUqA8FlNE/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/BivUqA8FlNE/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="#isetoziro" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -143,7 +143,7 @@
 
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/yUGsNqy8Ax/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/yUGsNqy8Ax/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="#microkosmos" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -193,7 +193,7 @@
             </div>
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B8lB7UwpNLt/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/B8lB7UwpNLt/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="#hato" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -243,7 +243,7 @@
             </div>
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/By8uiyrBoRF/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/By8uiyrBoRF/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="#kawaracafe" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -293,7 +293,7 @@
             </div>
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/BWUMELmBc1u/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/BWUMELmBc1u/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="#siroichi" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -343,7 +343,7 @@
             </div>
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B05lKCnA8Vp/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/B05lKCnA8Vp/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="#iemonsalon" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -393,7 +393,7 @@
             </div>
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/BJUy1MzhCb3/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/BJUy1MzhCb3/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="#azabusabo" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -446,7 +446,7 @@
     </div>
 
     <div class="detail">
-        <div class="green">
+        <div class="green" id="zenkasyoin">
             <div class="right">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B8Ap2dBAhaE/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
                     <div style="padding:16px;"> <a href="https://www.instagram.com/p/B8Ap2dBAhaE/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
@@ -506,7 +506,7 @@
             </div>
         </div>
 
-        <div class="cream">
+        <div class="cream" id="isetoziro">
             <div class="left">
                 <div class="left-box">
                     <h2>茶寮伊勢藤次郎</h2>
@@ -567,7 +567,7 @@
         </div>
 
 
-        <div class="green">
+        <div class="green" id="microkosmos">
             <div class="right">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/yUGsNqy8Ax/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
                     <div style="padding:16px;"> <a href="https://www.instagram.com/p/yUGsNqy8Ax/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
@@ -628,7 +628,7 @@
             </div>
         </div>
 
-        <div class="cream">
+        <div class="cream" id="hato">
             <div class="left">
                 <div class="left-box">
                     <h2>茶亭 羽當</h2>
@@ -687,7 +687,7 @@
             </div>
         </div>
 
-        <div class="green">
+        <div class="green" id="kawaracafe">
             <div class="right">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/By8uiyrBoRF/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
                     <div style="padding:16px;"> <a href="https://www.instagram.com/p/By8uiyrBoRF/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
@@ -747,7 +747,7 @@
             </div>
         </div>
 
-        <div class="cream">
+        <div class="cream" id="siroichi">
             <div class="left">
                 <div class="left-box">
                     <h2>白一</h2>
@@ -808,7 +808,7 @@
         </div>
 
 
-        <div class="green">
+        <div class="green" id="iemonsalon">
             <div class="right">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B05lKCnA8Vp/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:195px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
                     <div style="padding:16px;"> <a href="https://www.instagram.com/p/B05lKCnA8Vp/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
@@ -869,7 +869,7 @@
             </div>
         </div>
 
-        <div class="cream">
+        <div class="cream" id="azabusabo">
             <div class="left">
                 <div class="left-box">
                     <h2>麻布茶房　西武渋谷店</h2>
